update kittyconf, zshrc, fastfetch

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -32,7 +32,8 @@
         },
         {
             "key": "│ {#35} kernel  {#keys}│",
-            "type": "kernel"
+            "type": "kernel",
+            "format": "{1} {6}"
         },
         {
             "key": "│ {#36}󰇄 desktop {#keys}│",
