--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ font_family      "Monaspace Neon NF"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+font_size 12.0
 
 cursor_blink_interval 0
 cursor_trail 1
@@ -11,8 +12,8 @@ cursor_trail_decay 0.1 0.2
 cursor_trail_start_threshold 5
 
 remember_window_size no
-initial_window_width  800
-initial_window_height 500
+initial_window_width  850
+initial_window_height 550
 
 window_padding_width 6 8
 hide_window_decorations yes
