update fastfetch, readme

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -32,8 +32,7 @@
         },
         {
             "key": "│ {#35} kernel  {#keys}│",
-            "type": "kernel",
-            "format": "{1} {6}"
+            "type": "kernel"
         },
         {
             "key": "│ {#36}󰇄 desktop {#keys}│",
